# orion

./: .gitmodules  README.md  pyproject.toml  reset_gpu.py  setup.py
configs/: lola2.yml  mlp.yml  resnet.yml
examples/: report2.nsys-rep  report5.nsys-rep  rmm_log.txt  run_lola.py
models/: lola.py
orion/backend/heongpu/: bindings.py
orion/backend/lattigo/: go.mod
orion/backend/python/: evaluator.py  lt_evaluator.py  poly_evaluator.py  tensors.py
orion/core/: orion.py
orion/nn/: activation.py  linear.py  normalization.py  operations.py
tools/: build_backends.py
