[build-system]
requires = ["poetry-core>=1.0.2", "setuptools>=61.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orion-fhe"
version = "1.0.2"
description = "A Fully Homomorphic Encryption Framework for Deep Learning"
authors = ["Austin Ebel <abe5240@nyu.edu>"]
readme = "README.md"
packages = [{include = "orion"}]
exclude = [
    "orion/backend/heongpu/**/build/**",
    "orion/backend/heongpu/**/_deps/**",
    "orion/backend/heongpu/**/.git/**",
    "orion/backend/heongpu/adrianHEonGPU/build/_deps/cccl-src/github/**",
    "orion/backend/heongpu/adrianHEonGPU/build/**",
    "orion/backend/heongpu/adrianHEonGPU/_deps/**",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PyYAML = ">=6.0"
torch = ">=2.2.0"
torchvision = ">=0.17.0"
tqdm = ">=4.30.0"
numpy = ">=1.21.0"
scipy = ">=1.7.0,<=1.14.1"
matplotlib = ">=3.1.0"
h5py = ">=3.5.0"
certifi = ">=2024.2.2"

[tool.poetry.build]
generate-setup-file = true
script = "tools/build_backends.py"